# mttf-multicore-tc

./: .gitignore  CMakeLists.txt  README.md  cycles.cpp  cycles.h  example_paper.txt  how_to.txt  main.cpp  paper_example.csv  prova.txt  rainflow.cpp  rainflow.h
file_generator/: main.cpp
